--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>the Recipes</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique porttitor ornare. Duis bibendum mauris.</p>
     <ul>
-        <li>Classic Waffles</li>
+        <li><a href="waffles.html">Classic Waffles</a></li>
     </ul>
 </body>
 </html>
