--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique porttitor ornare. Duis bibendum mauris.</p>
     <ul>
-        <li><a href="waffles.html">Classic Waffles</a></li>
+        <li><a href="recipes/waffles.html">Classic Waffles</a></li>
     </ul>
 </body>
 </html>
