add cookie.html and edit waffles.html

--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet</h1>
-    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.seasonsandsuppers.ca%2Fwp-content%2Fuploads%2F2018%2F11%2Fwaffles-1B.jpg&imgrefurl=https%3A%2F%2Fwww.seasonsandsuppers.ca%2Fclassic-waffles%2F&tbnid=KZB2fJKLlX1ZGM&vet=12ahUKEwiq7azv-ff0AhUI3JQKHUsjBUwQMygBegUIARCoAQ..i&docid=qlDH9Vd660DQnM&w=1170&h=780&itg=1&q=classic%20waffle&client=ubuntu&ved=2ahUKEwiq7azv-ff0AhUI3JQKHUsjBUwQMygBegUIARCoAQ" alt="">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.landolakes.com%2Frecipe%2F16700%2Fbelgian-style-waffles%2F&psig=AOvVaw1siNiNhsvJJwz1tAGOEQqa&ust=1640326752365000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNj5ob-j-fQCFQAAAAAdAAAAABAD" alt="">
     <h3>Contrary to popular belief</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at arcu vel metus sollicitudin vehicula. Etiam facilisis turpis nisi, tincidunt blandit nunc commodo nec. Nulla facilisi. Nunc volutpat elit tristique vestibulum ultrices. Sed dictum tempus ipsum nec faucibus. Praesent eget tellus et nisi ullamcorper sollicitudin at eget tortor. Maecenas sed tempus odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras a euismod ligula. In felis lectus, vestibulum in lorem nec, blandit consequat nisl. Cras consectetur eleifend convallis. Vivamus nec aliquam mi. Vestibulum vitae lectus elementum felis venenatis interdum. Fusce a aliquet nisi. Mauris elit erat, viverra sit amet lectus ut, fermentum egestas quam.</p>
     <p>
