add cookie page to index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique porttitor ornare. Duis bibendum mauris.</p>
     <ul>
         <li><a href="recipes/waffles.html">Classic Waffles</a></li>
+        <li><a href="recipes/cookies.html">Chocolate Cookies</a></li>
     </ul>
 </body>
 </html>
